# kadocalc

./: .gitignore  README.md  __main__.py  calc.ts  dict.json  pyproject.toml  utils.ts
cardcalc/: __init__.py  core.py
cardcalc/utils/: jobs.py  max_subarray.py  time.py
