[tool.poetry]
name = "cardcalc"
version = "0.1.0"
description = "AST optimal card calc"
authors = ["kuwoyuki <kuwoyuki@cock.li>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ujson = "^3.2.0"
requests = "^2.24.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
